# jetvoy-market-bot

./: .env.example  .gitignore  Cargo.toml
config/: default.toml
scripts/: generate-wallets.sh  jetvoy-market-bot.service  setup.sh  start.sh
src/: config.rs  dex.rs  executor.rs  main.rs  monitor.rs  randomizer.rs  smart_wallet.rs  wallet.rs
